--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:name=".AppApplication"
         android:theme="@style/AppTheme">
         <activity android:name=".MainScreen.MainActivity">
             <intent-filter>
@@ -16,6 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".AddScreen.AddScreenActivity" />
+        <activity android:name=".AddScreen.AddCategoryActivity"></activity>
     </application>
 
 </manifest>
