--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,10 +4,11 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/schetovod_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:name=".AppApplication"
+        android:largeHeap="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainScreen.MainActivity">
             <intent-filter>
@@ -17,7 +18,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".AddScreen.AddScreenActivity" />
-        <activity android:name=".AddScreen.AddCategoryActivity"></activity>
+        <activity android:name=".AddScreen.AddCategoryActivity"/>
     </application>
 
 </manifest>
